--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Memory Map Visualization</title>
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
@@ -36,5 +36,5 @@
             </div>
         </div>
     </div>
-    <script src="/client.js"></script>
+    <script src="client.js"></script>
 </html>
