More mobile adjustments

--- a/index.html
+++ b/index.html
@@ -27,10 +27,16 @@
             <div class="map-view">
                 <h1>Memory Map Visualization</h1>
                 <p>48-bit virtual address space (256 TiB) mapped to 1024x1024 using Hilbert curve</p>
-                <p><button onclick="resetZoom()">Reset Zoom</button> | Double-click grid squares to zoom in | Press 'r' to reset</p>
+                <p>
+                    <button onclick="resetZoom()">Reset Zoom</button> | 
+                    <span class="desktop-instruction">Double-click grid squares to zoom in</span>
+                    <span class="mobile-instruction">Double-tap grid squares to zoom in</span>
+                    <span class="desktop-instruction"> | Press 'r' to reset</span>
+                </p>
                 <div class="canvas-container">
                     <canvas id="backgroundCanvas"></canvas>
                     <canvas id="memoryCanvas"></canvas>
+                    <div id="mobile-scale-info" class="mobile-scale-info"></div>
                 </div>
                 <div class="tooltip" id="tooltip" style="display: none;"></div>
             </div>
