--- a/index.html
+++ b/index.html
@@ -28,10 +28,9 @@
                 <h1>Memory Map Visualization</h1>
                 <p>48-bit virtual address space (256 TiB) mapped to 1024x1024 using Hilbert curve</p>
                 <p>
-                    <button onclick="resetZoom()">Reset Zoom</button> | 
-                    <span class="desktop-instruction">Double-click grid squares to zoom in</span>
-                    <span class="mobile-instruction">Double-tap grid squares to zoom in</span>
-                    <span class="desktop-instruction"> | Press 'r' to reset</span>
+                    <button onclick="resetZoom()">Reset Zoom</button>
+                    <span class="desktop-instruction"> | Double-click grid squares to zoom in | Press 'r' to reset</span>
+                    <span class="mobile-instruction"> | Double-tap grid squares to zoom in</span>
                 </p>
                 <div class="canvas-container">
                     <canvas id="backgroundCanvas"></canvas>
