Press 'u' for up

--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
                 <h1>Memory Map Visualization</h1>
                 <p>48-bit virtual address space (256 TiB) mapped to 1024x1024 using Hilbert curve</p>
                 <p>
+                    <button onclick="zoomOut()">Zoom Out</button>
                     <button onclick="resetZoom()">Reset Zoom</button>
-                    <span class="desktop-instruction"> | Double-click grid squares to zoom in | Press 'r' to reset</span>
+                    <span class="desktop-instruction"> | Double-click grid squares to zoom in | Press 'u' to zoom out | Press 'r' to reset</span>
                     <span class="mobile-instruction"> | Double-tap grid squares to zoom in</span>
                 </p>
                 <div class="canvas-container">
