--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <p>
                     <button onclick="zoomOut()">Zoom Out</button>
                     <button onclick="resetZoom()">Reset Zoom</button>
-                    <span class="desktop-instruction"> | Double-click grid squares to zoom in | Press 'u' to zoom out | Press 'r' to reset</span>
+                    <span class="desktop-instruction"> | Double-click grid squares to zoom in | 'u' to zoom out | 'r' to reset | Up/down to navigate addresses | Left/right to navigate regions </span>
                     <span class="mobile-instruction"> | Double-tap grid squares to zoom in</span>
                 </p>
                 <div class="canvas-container">
