Better upload handling

--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
         <div id="editor-tab" class="tab-content active">
             <div class="text-editor">
                 <div class="editor-toolbar">
-                    <button onclick="loadSampleFile()">Load Sample</button>
+                    <select id="sampleSelect" onchange="loadSelectedSample()">
+                        <option value="">Load Sample...</option>
+                        <option value="original-data.txt">Memory Map Sample</option>
+                        <option value="geoip2-ipv4.csv">IPv4 GeoIP Sample</option>
+                    </select>
                     <input type="file" id="fileInput" style="display: none;" onchange="handleFileUpload(event)">
                     <button onclick="document.getElementById('fileInput').click()">Upload File</button>
                     <button id="toggleFullContent" onclick="toggleFullContent()" style="display: none;">Show Full Content</button>
